######################################################################################################################
# Python Configurations
#


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "github"
description = "GitHub special folder for documentation; no Python packages included."
version = "0.1.0"
license = "Proprietary"

authors = [
    "Andrew Vaughan <hello@andrewvaughan.io>",
]

readme = "README.md"

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Natural Language :: English",
  "Topic :: Documentation",
]

packages = [
  { include = "github" },
]


##
# Production dependencies
#
[tool.poetry.dependencies]

# To identify, run `vermin` on the Python files in the project
# https://github.com/netromdk/vermin
python = "^3.7"


##
# bandit security risk checker
#
# https://bandit.readthedocs.io/
#
# [tool.bandit]
# exclude_dirs = [
#   ".github/install-hooks.py",
# ]
